Fix banner spacing

--- a/partials/_boxes.scss
+++ b/partials/_boxes.scss
@@ -38,6 +38,12 @@ figcaption {
 
 .banner {
   @include fullwidth;
+
+  padding: 0;
+}
+
+main > .banner:first-child {
+  margin-top: -2rem;
 }
 
 .thumbnail {
